--- a/src/main/resources/templates/personne/personneForm.html
+++ b/src/main/resources/templates/personne/personneForm.html
@@ -66,7 +66,7 @@
 				th:errorclass="fieldError" maxlength="35" />
 		</div>
 		<div class="form-group">					
-			<label th:text="#{password}" for="password"></label>
+			<label th:text="#{motDePasse}" for="password"></label>
 			<input
 				class="form-control" type="password" th:field="*{password}"
 				th:errorclass="fieldError" maxlength="35" />
