--- a/src/main/resources/templates/essaim/essaimsListe.html
+++ b/src/main/resources/templates/essaim/essaimsListe.html
@@ -4,7 +4,7 @@
 <script th:inline="javascript">
 $(document).ready(function() {
 	let table = $('#essaims').DataTable({
-    	select: true,
+    	select: {style: 'multi+shift'},
         dom: 'Blftip',
         buttons: [
 	    	'csv',
@@ -58,13 +58,14 @@ $(document).ready(function() {
 			<div class="col">
 				<a id="cree" th:href="@{/essaim/cree}"
 				  class="oi oi-plus" th:title="#{ajouterEssaim}" aria-hidden="true"></a>&nbsp;
+       			&nbsp;
        			<a id="traitement" href="#"
 					class="selection oi oi-bug" th:title="#{evenementsTraitement}" aria-hidden="true"></a>
 				<a id="sucre" href="#"
 				  class="selection oi oi-beaker" th:title="#{evenementsSucre}" aria-hidden="true"></a>
 				<a id="commentaire" href="#"
 				  class="selection oi oi-info" th:title="#{evenementsCommentaire}" aria-hidden="true"></a>
-
+				&nbsp;
 				<a th:href="@{/essaim/statistiques}"
 				  class="oi oi-bar-chart" th:title="#{statistiquesessaims}" aria-hidden="true"></a>
 				  
