--- a/src/main/resources/templates/rucher/rucherAjout.html
+++ b/src/main/resources/templates/rucher/rucherAjout.html
@@ -5,7 +5,7 @@
 <script th:inline="javascript">
 $().ready(function() {
 	let tableajout = $('#ajoutRuches').DataTable({
-    	select: true
+		select: {style: 'multi+shift'}
     });
 	$('#retraitRuches').DataTable({
     });
