messages.properties améliorations

--- a/src/main/resources/templates/essaim/essaimAssociation.html
+++ b/src/main/resources/templates/essaim/essaimAssociation.html
@@ -42,7 +42,7 @@ $(document).ready(function() {
 				<tr>
 					<th th:text="#{ruche}"></th>
 				    <th th:text="#{dateAcquisition}"></th>
-					<th th:text="#{typeRuche}"></th>
+					<th th:text="#{type}"></th>
 				</tr>
 			</thead>
 			<tbody>
