--- a/src/main/resources/templates/hausse/hausseDetail.html
+++ b/src/main/resources/templates/hausse/hausseDetail.html
@@ -106,7 +106,7 @@ $().ready(function() {
 			<thead>
 				<tr>
 					<th style="background-color:PaleGoldenRod" th:text="#{ruche}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{ordre}"></th>
+					<th style="background-color:PaleGoldenRod" th:text="#{Ordre}"></th>
 					<th style="background-color:PaleGoldenRod" th:text="#{date}"></th>
 					<th style="background-color:LemonChiffon" th:text="#{rucher}"></th>	
 					<th style="background-color:LemonChiffon" th:text="#{date}"></th>
