--- a/src/main/resources/templates/ruche/rucheAjoutRetrait.html
+++ b/src/main/resources/templates/ruche/rucheAjoutRetrait.html
@@ -63,7 +63,7 @@
 		<table class="table table-bordered" id="retraitHausses">
 			<thead>
 				<tr>
-					<th th:text="#{ordre}"></th>
+					<th th:text="#{Ordre}"></th>
 					<th th:text="#{nom}"></th>	
 				</tr>
 			</thead>
