--- a/src/main/resources/templates/ruche/rucheDetail.html
+++ b/src/main/resources/templates/ruche/rucheDetail.html
@@ -85,7 +85,7 @@ $().ready(function() {
 				<th th:text="#{dateAcquisition}"></th>
 				<th th:text="#{poidsVide}"></th>
 				<th th:text="#{nbCadresMax}"></th>
-				<th th:text="#{typeRuche}"></th>
+				<th th:text="#{type}"></th>
 				<th style="background-color:LemonChiffon" th:text="#{latitude}"></th>
 				<th style="background-color:LemonChiffon" th:text="#{longitude}"></th>
 				<th th:text="#{commentaire}"></th>
@@ -152,7 +152,7 @@ $().ready(function() {
 			<thead>
 				<tr>
 					<th th:text="#{nom}"></th>
-					<th th:text="#{ordre}"></th>
+					<th th:text="#{Ordre}"></th>
 					<th>Date pose</th>
 					<th th:if="${session.voirInactif}" th:text="#{active}"></th>
 					<th th:text="#{dateAcquisition}"></th>
