--- a/src/main/resources/templates/ruche/ruchesListePlus.html
+++ b/src/main/resources/templates/ruche/ruchesListePlus.html
@@ -43,7 +43,7 @@
 					<th th:text="#{poidsVide}"></th>
 					<th style="background-color:Tomato" th:text="#{nbCadres}"></th>
 					<th style="background-color:Tomato" th:text="#{nbCadresMax}"></th>
-					<th th:text="#{typeRuche}"></th>
+					<th th:text="#{type}"></th>
 					<th style="background-color:PaleGoldenRod" th:text="#{lesHausses}"></th>
 					<th style="background-color:PaleGoldenRod"></th>										
 					<th style="background-color:PaleGoldenRod" >Commentaire hausse</th>
