--- a/src/main/resources/templates/ruche/ruchesListeRucher.html
+++ b/src/main/resources/templates/ruche/ruchesListeRucher.html
@@ -45,7 +45,7 @@ $(document).ready(function() {
 					<th th:text="#{poidsVide}"></th>
 					<th style="background-color:Tomato" th:text="#{nbCadres}"></th>
 					<th style="background-color:Tomato" th:text="#{nbCadresMax}"></th>
-					<th th:text="#{typeRuche}"></th>
+					<th th:text="#{type}"></th>
 					<th th:text="#{lesHausses}"></th>
 					<th:block th:if="${session.voirLatLon}">
 						<th style="background-color: LemonChiffon" th:text="#{latitude}"></th>
