--- a/src/main/resources/templates/rucher/rucherAjout.html
+++ b/src/main/resources/templates/rucher/rucherAjout.html
@@ -67,7 +67,7 @@ $().ready(function() {
 		</table>
 		<h6>
 			<a id="actionAjoutRuches" href="#actionAjoutRuches"
-				th:text="#{ajouterRuchesRucher}"></a>
+				th:text="#{ajoutRuches}"></a>
 		</h6>
 		<table class="table table-bordered" id="ajoutRuches">
 			<thead>
