--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -111,7 +111,7 @@
 					<th class="num" th:text="#{poidsVide}"></th>
 					<th class="num" th:text="#{nbCadres}"></th>
 					<th style="background-color:PaleGoldenRod" class="num" th:text="#{nbCadresMax}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{typeRuche}"></th>
+					<th style="background-color:PaleGoldenRod" th:text="#{type}"></th>
 					<th th:text="#{commentaire}"></th>
 				</tr>
 				</thead>
