--- a/src/main/resources/templates/ruche/rucheForm.html
+++ b/src/main/resources/templates/ruche/rucheForm.html
@@ -71,7 +71,7 @@
 				
 		</div>
 		<div class="form-group">
-			<label for="type" th:text="#{typeRuche}"></label> <select
+			<label for="type" th:text="#{type}"></label> <select
 				class="form-control" th:field="*{type}">
 				<option th:each="type : ${rucheTypes}" th:value="${type.id}"
 					th:text="${type.nom}"></option>
