--- a/src/main/resources/templates/ruche/ruchesListePlusRucher.html
+++ b/src/main/resources/templates/ruche/ruchesListePlusRucher.html
@@ -47,7 +47,7 @@ $(document).ready(function() {
 					<th th:text="#{poidsVide}"></th>
 					<th style="background-color:Tomato" th:text="#{nbCadres}"></th>
 					<th style="background-color:Tomato" th:text="#{nbCadresMax}"></th>
-					<th th:text="#{typeRuche}"></th>
+					<th th:text="#{type}"></th>
 					<th style="background-color:PaleGoldenRod" th:text="#{lesHausses}"></th>
 					<th style="background-color:PaleGoldenRod"></th>										
 					<th style="background-color:PaleGoldenRod" >Commentaire hausse</th>
