--- a/src/main/resources/templates/infos.html
+++ b/src/main/resources/templates/infos.html
@@ -39,6 +39,24 @@
 		</div>
 	</div>
 	<div class="container-fluid accordion">
+		<h1 class="item" th:text="#{distButinage}"></h1>
+		<table class="table table-responsive table-bordered table-striped" id="ruches">
+			<thead>
+				<tr>
+					<th scope="col" th:text="#{rayonkm}"></th>
+					<th scope="col" th:text="#{surfacekm2}"></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="rayon : ${rayonsButinage}">
+					<td th:text="${#numbers.formatDecimal(rayon/1000,1,3)}"></td>
+					<td th:text="${#numbers.formatDecimal(rayon*rayon*3.141592653589793/1000000,1,3)}"></td>
+				</tr>
+
+			</tbody>
+		</table>
+	</div>
+	<div class="container-fluid accordion">
 		<h1 class="item" th:text="#{valeursParAnnee}"></h1>
 		<table class="table table-responsive table-bordered table-striped" id="ruches">
 			<thead>
@@ -204,8 +222,8 @@
 	</div>
 	<div th:if="${#arrays.length(ruchesTropLoins)} &gt; 0"
 		class="container-fluid accordion">
-		<h1 class="item" th:text="${#arrays.length(ruchesTropLoins)} + ' ruche(s) à plus de ' + 
-			${#numbers.formatDecimal(distRuchesTropLoins,1,0)} + 'm de leurs ruchers'"></h1>
+		<h1 class="item" th:text="${#arrays.length(ruchesTropLoins)} + ' ' +
+			#{ruchesAPlusde(${#numbers.formatDecimal(distRuchesTropLoins,1,0)})}"></h1>
 		<div>
 		<table class="table table-bordered table-striped datatable-tri">
 			<thead>
@@ -228,8 +246,8 @@
 	<div th:if="${#arrays.length(ruchesPasDEvenement)} &gt; 0"
 		class="container-fluid accordion">
 		<h1 class="item"
-			th:text="${#arrays.length(ruchesPasDEvenement)} + ' ruche(s) sans événement depuis ' + 
-				${retardRucheEvenement} + ' semaines'"></h1>
+			th:text="${#arrays.length(ruchesPasDEvenement)} + ' ' +
+				#{ruchesSansEven(${retardRucheEvenement})}"></h1>
 		<div>
 		<table class="table table-bordered table-striped datatable-tri">
 			<thead>
