--- a/src/main/resources/templates/infos.html
+++ b/src/main/resources/templates/infos.html
@@ -49,8 +49,8 @@
 			</thead>
 			<tbody>
 				<tr th:each="rayon : ${rayonsButinage}">
-					<td th:text="${#numbers.formatDecimal(rayon/1000,1,3)}"></td>
-					<td th:text="${#numbers.formatDecimal(rayon*rayon*3.141592653589793/1000000,1,3)}"></td>
+					<td th:text="${#numbers.formatDecimal(rayon/1000.0,1,3)}"></td>
+					<td th:text="${#numbers.formatDecimal(rayon*rayon*3.141592653589793/1000000.0,1,3)}"></td>
 				</tr>
 
 			</tbody>
