--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -52,7 +52,7 @@ if ((window.navigator.language == 'fr') || (window.navigator.language.indexOf('f
 <th:block th:replace="${styles} ?: ~{}" />
 <th:block th:replace="${links} ?: ~{}" />
 </head>
-<script th:fragment="d3" th:src="@{/js/d3.min-6.5.0.js}"></script>
+<script th:fragment="d3" th:src="@{/js/d3.min-6.7.0.js}"></script>
 <script th:fragment="d3-color" th:src="@{/js/d3-color.min-2.0.0.js}"></script>
 <script th:fragment="d3-interpolate" th:src="@{/js/d3-interpolate.min-2.0.1.js}"></script>
 <script th:fragment="d3-scale-chromatic" th:src="@{/js/d3-scale-chromatic.min-2.0.0.js}"></script>
@@ -69,10 +69,10 @@ if ((window.navigator.language == 'fr') || (window.navigator.language.indexOf('f
 	th:href="@{/js/GpPluginOpenLayers-3.0.13.1/GpPluginOpenLayers.css}" />
 	
 <script th:fragment="dom-to-image" th:src="@{/js/dom-to-image-more.min-2.8.0.js}"></script>
-<script th:fragment="jspdf" th:src="@{/js/jspdf.min-2.1.1.js}"></script>
+<script th:fragment="jspdf" th:src="@{/js/jspdf.umd.min-2.3.1.js}"></script>
 <script th:fragment="jsdatepicker-fr" th:src="@{/js/datepicker-fr.js}"></script>
 
-<script th:fragment="jsChart" th:src="@{/js/chart.min-3.0.1.js}"></script>
+<script th:fragment="jsChart" th:src="@{/js/chart.min-3.1.1.js}"></script>
 
 <script th:fragment="jsdatetimepicker" th:src="@{/js/jquery.datetimepicker.full.min-2.5.20.js}"></script>
 <link th:fragment="cssdatetimepicker" rel="stylesheet" type="text/css" media="all"
