--- a/src/main/resources/templates/essaim/essaimCommentaireForm.html
+++ b/src/main/resources/templates/essaim/essaimCommentaireForm.html
@@ -4,7 +4,7 @@
 <script th:replace="include :: jsdatetimepicker"></script>
 <link th:replace="include :: cssdatetimepicker" />
 <script th:replace="include :: localejsdatetimepicker"></script>
-<script th:inline="javascript">
+<script>
 	$().ready(function() {
 		$("#commentaire").focus();
 		$("#evenementForm").validate({
