--- a/src/main/resources/templates/essaim/essaimCommentaireLotForm.html
+++ b/src/main/resources/templates/essaim/essaimCommentaireLotForm.html
@@ -6,17 +6,14 @@
 <script th:replace="include :: localejsdatetimepicker"></script>
 <script>
 	$().ready(function() {
-		$("#valeur").focus();
+		$("#commentaire").focus();
 		$("#evenementForm").validate({
 			rules : {
 				date : {
 					required : true
 				},
-				valeur : {
-					required : true,
-					number : true
-				},
 				commentaire : {
+					required : true,
 					maxlength : 255
 				}
 			}
@@ -36,12 +33,10 @@
 			</div>
 		</div>
 	</div>
-	<form action="#"
-		th:action="@{'/evenement/essaim/sauve/lot/' + ${essaimsNoms}}"
+	<form action="#" th:action="@{'/evenement/essaim/sauve/lot/' + ${essaimsNoms}}"
 		method="post" id="evenementForm">
-		<input type="hidden" id="typeEvenement" name="typeEvenement"
-			value="COMMENTAIREESSAIM" />
 		<input type="hidden" id="valeur" name="valeur" />
+		<input type="hidden" id="typeEvenement" name="typeEvenement" value="COMMENTAIREESSAIM" />
 		<div th:insert="includeForm :: date"></div>
 		<div th:insert="includeForm :: commentaire"></div>
 		<div th:insert="includeForm :: BtnForm"></div>
