--- a/src/main/resources/templates/ruche/rucheCommentaireForm.html
+++ b/src/main/resources/templates/ruche/rucheCommentaireForm.html
@@ -9,7 +9,7 @@
 		$("#commentaire").focus();
 		$("#evenementForm").validate({
 			rules : {
-				dateEvenement : {
+				date : {
 					required : true
 				},
 				commentaire : {
@@ -30,9 +30,9 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-				<th:block th:text="#{commentaire} + ' '"></th:block>
-				  <a th:href="@{'/ruche/'+${rucheId}}"
-					th:text="#{ruche} + ' ' + ${ruche.nom}"></a>
+					<th:block th:text="#{commentaire} + ' '"></th:block>
+				  	<a th:href="@{'/ruche/'+${rucheId}}"
+						th:text="#{ruche} + ' ' + ${ruche.nom}"></a>
 				</h1>
         	</div>
         </div>
@@ -40,8 +40,8 @@
 	<form action="#" th:action="@{'/evenement/ruche/sauve/'+${ruche.id}}"
 		method="post" id="evenementForm">		
 		<input type="hidden" id="retourEssaim" name="retourEssaim" th:value="${retourEssaim}"/>
-		<input type="hidden" id="typeEvenement" name="typeEvenement" value="COMMENTAIRERUCHE"/>
 		<input type="hidden" id="valeur" name="valeur"/>
+		<input type="hidden" id="typeEvenement" name="typeEvenement" value="COMMENTAIRERUCHE"/>
 		<div th:insert="includeForm :: date"></div>
 		<div th:insert="includeForm :: commentaire"></div>
 		<div th:insert="includeForm :: BtnForm"></div>
