--- a/src/main/resources/templates/ruche/rucheCommentaireLotForm.html
+++ b/src/main/resources/templates/ruche/rucheCommentaireLotForm.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:replace="include :: jsdatetimepicker"></script>
-<link th:replace="include :: cssdatetimepicker" />
+<link th:replace="include :: cssdatetimepicker"/>
 <script th:replace="include :: localejsdatetimepicker"></script>
 <script>
 	$().ready(function() {
@@ -29,18 +29,18 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<h1 class="item" th:text="#{commentaireLotEssaim} + ' ' + ${essaimsNoms}"></h1>
+				<h1 class="item" th:text="#{commentaireLotRuche} + ' ' + ${ruchesNoms}"></h1>
 			</div>
 		</div>
-	</div>
-	<form action="#" th:action="@{'/evenement/essaim/sauve/lot/' + ${essaimsNoms}}"
+    </div> 
+    <form action="#" th:action="@{'/evenement/ruche/sauve/lot/' + ${ruchesNoms}}"
 		method="post" id="evenementForm">
 		<input type="hidden" id="valeur" name="valeur" />
-		<input type="hidden" id="typeEvenement" name="typeEvenement" value="COMMENTAIREESSAIM" />
+		<input type="hidden" id="typeEvenement" name="typeEvenement" value="COMMENTAIRERUCHE" />
 		<div th:insert="includeForm :: date"></div>
 		<div th:insert="includeForm :: commentaire"></div>
 		<div th:insert="includeForm :: BtnForm"></div>
 	</form>
-	<footer th:replace="include::footer"></footer>
+	<footer th:include="include::footer"></footer>
 </body>
 </html>
