--- a/src/main/resources/templates/ruche/ruchesListe.html
+++ b/src/main/resources/templates/ruche/ruchesListe.html
@@ -3,7 +3,7 @@
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
 	$(document).ready(function() {
-		let table = $('#ruches').DataTable({
+		const table = $('#ruches').DataTable({
 	    	select: {style: 'multi+shift'},
 	        dom: 'Blftip',
 		    buttons: [
@@ -18,13 +18,11 @@
 	    	if ( type === 'row' ) {
 	    		let noms = "";
 	            table.rows( { selected: true } ).data().pluck( 0 ).each(function (value, index) {
-	            	// on récupère le nom de la ruche dans le texte de la balise <a ...>
 	            	const a = document.createElement('a');
 	            	a.innerHTML = value;
 	            	noms += a.textContent + ",";
 	            });
 	            if (noms) { 
-	                // on enlève la dernière virgule et met à jour l'url de traitement
 	            	noms = noms.substring(0, noms.length-1);
 	            	$('#commentaire').attr('href', [[@{/evenement/ruche/commentaireLot/}]] + noms);
 	            } else {
