--- a/src/main/resources/templates/rucher/rucherMeteo.html
+++ b/src/main/resources/templates/rucher/rucherMeteo.html
@@ -38,7 +38,7 @@ $().ready(function() {
        	$('#pression').html(data.current.pressure + 'hPa');
        	$('#uvi').html(data.current.uvi);
        	$('#ventVitesse').html((data.current.wind_speed * 3.6).toFixed(1) + 'km/h');
-       	$('#ventDirection').html(data.current.wind_deg + '°');
+       	$('#ventDirection').html(data.current.wind_deg + '° ' + degToCard(data.current.wind_deg));
        	$('#ventRafales').html((data.current.hasOwnProperty('wind_gust')?(data.current.wind_gust * 3.6):'0') + 'km/h');
        	$('#nuages').html(data.current.clouds + '%');
        	$('#visibilite').html(data.current.visibility + 'm');       	
@@ -52,6 +52,24 @@ $().ready(function() {
 	});
 	function fdate(t) {
 		return new Date(t*1000).toLocaleString(undefined, optionsDate).replace(' à','');
+	}
+	function degToCard(deg) {
+		if (deg>11.25 && deg<=33.75) return "NNE";
+		else if (deg>33.75 && deg<=56.25) return "NE";
+		else if (deg>56.25 && deg<=78.75) return "ENE";
+		else if (deg>78.75 && deg<=101.25) return "E";
+		else if (deg>101.25 && deg<=123.75) return "ESE";
+		else if (deg>123.75 && deg<=146.25) return "SE";
+		else if (deg>146.25 && deg<=168.75) return "SSE";
+		else if (deg>168.75 && deg<=191.25) return "S";
+		else if (deg>191.25 && deg<=213.75) return "SSW";
+		else if (deg>213.75 && deg<=236.25) return "SW";
+		else if (deg>236.25 && deg<=258.75) return "WSW";
+		else if (deg>258.75 && deg<=281.25) return "W";
+		else if (deg>281.25 && deg<=303.75) return "WNW";
+		else if (deg>303.75 && deg<=326.25) return "NW";
+		else if (deg>326.25 && deg<=348.75) return "NNW";
+		else return "N"; 		
 	}
 });
 </script>
